Add new handlers [+] Get Refunds [+] Get Archived Producs [+] Get Defects [+] Create Defects
