# internal/app/deleteProduct_handler.go
@@ -1,0 +1,30 @@
+package app
+
+import (
+	"context"
+	"errors"
+	"lignis/internal/generated/api"
+	"lignis/internal/model"
+
+	"go.mongodb.org/mongo-driver/bson/primitive"
+)
+
+func (a App) DeleteProduct(ctx context.Context, params api.DeleteProductParams) (*api.SuccessResponse, error) {
+
+	user := ctx.Value("user").(*model.Claims)
+
+	if user.Role != "manager" {
+		return &api.SuccessResponse{}, errors.New("access denied")
+	}
+
+	id, err := primitive.ObjectIDFromHex(params.ID)
+	if err != nil {
+		return &api.SuccessResponse{}, err
+	}
+
+	err = a.productRepo.Delete(id)
+	if err != nil {
+		return &api.SuccessResponse{}, err
+	}
+	return &api.SuccessResponse{Message: "product deleted"}, nil
+}
